# HelixPair

./: README.md  pyproject.toml
configs/: base.yaml  pipeline.yaml
configs/benchmarks/: default.yaml  external_functional_mpra_benchmark.yaml  phase45_hematopoiesis.yaml  synthetic.yaml
configs/phase1_monomer/: default.yaml  smoke.yaml  synthetic.yaml
configs/phase2_pair/: default.yaml  smoke.yaml  synthetic.yaml
configs/phase3_state/: default.yaml  smoke.yaml  synthetic.yaml
configs/phase4_usage/: default.yaml  hematopoiesis.yaml  phase45_hematopoiesis.yaml  smoke.yaml  synthetic.yaml
configs/phase5_functional/: default.yaml  external_functional_mpra_benchmark.yaml  external_functional_mpra_benchmark_locked_default_seed11.yaml  hematopoiesis.yaml  phase45_hematopoiesis.yaml  reporter_default.yaml  reporter_pairranked_signed_gain_locked.yaml  smoke.yaml  synthetic.yaml
configs/scenarios/: real.yaml  synthetic.yaml
data/paper_results/: data_manifest.csv  helixpair_biochemical_source.csv  helixpair_case_examples.csv  helixpair_helical_geometry_curve.csv  helixpair_primary_metrics.csv  helixpair_reporter_source.csv
data_processed/: README.md
manifest/: package_hashes.csv
provenance/: dataset_manifest.tsv  figure_source_manifest.csv  latest_baseline.md  package_metadata.json
scripts/: build_external_functional_benchmarks.py  build_external_functional_dataset.py  build_hematopoiesis_phase45_dataset.py  build_phase5_reporter_dataset.py  run_model_forward_demo.py  run_phase45_multiseed_clean.py  run_selected_experiment_demo.py  train_helixpair_phase.py
(+44 files in other folders)
