[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helixpair-full-clean"
version = "0.1.0"
description = "Clean HelixPair method implementation and training demo"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "openpyxl>=3.1",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "PyYAML>=6.0",
  "torch>=2.2",
  "pyfaidx>=0.8",
  "requests>=2.32",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]
genomics = ["pyBigWig>=0.3.22"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
